# NumberRecognition

./: CMakeLists.txt  README.md  main.cpp
data/: data1.txt  data2.txt  init_filter.txt  init_output_layer.txt  true_answer.txt
matrix_func/: matrix.cpp  matrix.h
output_data/cost/: cost.txt
output_data/model/: params.txt
train/: filter.cpp  output.cpp  param_list.cpp  readfile.cpp  train.cpp  train.h
